azureps-cmdlets-docs/ResourceManager/AzureRM.SiteRecovery/v1.1.11/Remove-AzureRmSiteRecoveryVault.md
---
external help file: Microsoft.Azure.Commands.SiteRecovery.dll-Help.xml
online version: .\Get-AzureRmSiteRecoveryVault.md
schema: 2.0.0
ms.assetid: 4632ABEF-7255-4DC2-807E-7A91EB11865D
---

# Remove-AzureRmSiteRecoveryVault

## SYNOPSIS
Removes a Site Recovery vault.

## SYNTAX

```
Remove-AzureRmSiteRecoveryVault -Vault <ASRVault> [<CommonParameters>]
```

## DESCRIPTION
The **Remove-AzureRmSiteRecoveryVault** cmdlet deletes an azure_2 Site Recovery vault.

## EXAMPLES

### 1:
```

```

## PARAMETERS

### -Vault
Specifies the Site Recovery vault object.

```yaml
Type: ASRVault
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Get-AzureRmSiteRecoveryVault](./Get-AzureRmSiteRecoveryVault.md)

[New-AzureRmSiteRecoveryVault](./New-AzureRmSiteRecoveryVault.md)


